Adicionado "Comportamento de Overflows" e "Divisões" no notebook "Inteiros e Float" 	Adicionada informação relevante acerca do uso de notebooks e REPL

--- a/Inteiros e Float.ipynb
+++ b/Inteiros e Float.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "id": "d76802d3-3b2a-4461-8b2c-6b6967b17237",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "Int64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "50b8e887-bd4c-4e5e-9662-ff1ff077cbc2",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "id": "906e1a04-93e4-4d78-9440-b83f0e173aa0",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "id": "cf56bf7a-6686-4de0-a7fc-74535bdd7a91",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "0xff"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "id": "b66e120e-1eb2-42fe-9090-37c1fb4c9e27",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "-32768"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 80,
    "id": "4348d3ad-d974-4328-8fab-a21ec706c6ef",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "32767"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,9 +213,238 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3a2a24d",
+   "metadata": {},
+   "source": [
+    "## Overflow\n",
+    "\n",
+    "Quando tentamos fazer um overflow (armazenar um valor tão grande/pequeno que nenhuma primitiva consegue representar), Julia vai aplicar [aritmética modular](https://en.wikipedia.org/wiki/Modular_arithmetic) fazendo com que os valor volte para o intervalo da primitiva.\n",
+    "\n",
+    "Caso queiramos pode representar esse número sem usar este 'wraparound', devemos fazer uso do `BigInt`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "103df5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9223372036854775807"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Integer Overflow (64bits)\n",
+    "x = typemax(Int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "3b16822e-fb1a-46da-b86a-8323ed03691f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vai transformá-lo no extremo negativo\n",
+    "x + 1 == typemin(Int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ce4793d2-880c-45c3-94dc-53f018392d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9223372036854775808"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contornar esse efeito com o uso do BigInt\n",
+    "x = BigInt(typemax(Int64))\n",
+    "x + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb7871f-0973-4103-8d6d-4ddc53aa35dc",
+   "metadata": {},
+   "source": [
+    "## Divisões\n",
+    "\n",
+    "As divisões também são bem interessantes por aqui. Todos sabemos que não podemos dividir por 0 e se usarmos a função `div` ela retornará um erro de divisão, assim como a divisão do menor número possível por -1, como podemos ver abaixo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "849d4a0f-5465-43e0-8b1a-689d5c1230be",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DivideError: integer division error",
+     "output_type": "error",
+     "traceback": [
+      "DivideError: integer division error",
+      "",
+      "Stacktrace:",
+      " [1] div(x::Int64, y::Int64)",
+      "   @ Base .\\int.jl:261",
+      " [2] top-level scope",
+      "   @ In[84]:2",
+      " [3] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "# Dividir 1 por 0\n",
+    "div(1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "b359c311-3239-4783-93a0-3359119de74e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DivideError: integer division error",
+     "output_type": "error",
+     "traceback": [
+      "DivideError: integer division error",
+      "",
+      "Stacktrace:",
+      " [1] div(x::Int64, y::Int64)",
+      "   @ Base .\\int.jl:261",
+      " [2] top-level scope",
+      "   @ In[85]:2",
+      " [3] eval",
+      "   @ .\\boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "# Dividir o typemin de u por -1\n",
+    "div(typemin(Int64), -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebfb1500-a9e1-4093-b2ab-475087533507",
+   "metadata": {},
+   "source": [
+    "Porém se dividirmos um número por 0 sem o uso da função `div`, vamos obter um valor infinito (`Inf`) do tipo `Float`.\n",
+    "\n",
+    "Para a divisão do menor número negativo por -1 dará um valor próximo do maior número possível."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "05ac1ec4-a08a-4720-8ac7-ac2e81c1cc67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIVIDIR NÚMERO POR 0\n",
+      "Inf\n",
+      "Float64\n",
+      "\n",
+      "DIVIDIR MENOR NÚMERO NEGATIVO POR -1\n",
+      "true\n",
+      "Float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"DIVIDIR NÚMERO POR 0\")\n",
+    "println( 1/0 )\n",
+    "println( typeof( 1/0 ) )\n",
+    "println(\"\\nDIVIDIR MENOR NÚMERO NEGATIVO POR -1\")\n",
+    "println( typemin(Int64)/-1 ≈ typemax(Int64))\n",
+    "println( typeof( typemin(Int64)/-1 ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "812d8484-b162-4f52-87f6-ec27244d3524",
+   "metadata": {},
+   "source": [
+    "Também temos as funções `rem` (resto) e `mod` (resto).\n",
+    "\n",
+    "A diferença entre elas confude-me um pouco, sei que `rem` é o mesmo que `x % y`, onde o sinal do divisor (y, neste caso) não importa. Quando o dividendo e divisor têm o mesmo sinal, `rem` e `mod` dão o mesmo resultado.\n",
+    "\n",
+    "Muitas coisas em Julia são iguais ao MATLAB e essas funções confirmam isso! Ao pesquisar um pouco, encontrei uma resposta que ajudou-me a elucidar um pouco.\n",
+    "\n",
+    "Pensemos então na divisão de $\\frac{5}{-3}$\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "\n",
+    "***Caso do `rem`***\n",
+    "\n",
+    "Este é o resto normal como se fizéssemos a conta manualmente, ou seja, o resto será ***2***.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "***Caso do `mod`***\n",
+    "Este é um caso que está relacionado à [aritmética modular](https://en.wikipedia.org/wiki/Modular_arithmetic).\n",
+    "\n",
+    "Pensemos nos múltiplos do nosso divisor, que no caso é 3 => $-3\\mathbb{Z} = -3\\{...,-3,-2,-1,0,1,2,3,...\\} = \\{...,9,6,3,0,-3,-6,-9,...\\}$\n",
+    "\n",
+    "O número que mais se proxima de 5 é o 6, logo temos de somar ***-1*** e esse será o nosso resto.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "A resposta completa está aqui (em inglês): [rem & mod](https://www.quora.com/I-am-a-beginner-in-MATLAB-programming-What-is-the-difference-between-the-two-operations-rem-and-mod-How-are-both-functionally-different)\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "****Regra Geral****:\n",
+    "\n",
+    "* Dividendo e divisor têm o mesmo sinal? Se sim, ambas vão retornar o mesmo.\n",
+    "* Para o `rem` só o sinal do dividendo muda o resultado final."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c6b5f1-7ba4-4e70-bd39-71bd2f031948",
+   "id": "2027fdb7-09af-49db-9c9a-51d7b5d0cd7c",
    "metadata": {},
    "outputs": [],
    "source": []
