--- a/Variáveis.ipynb
+++ b/Variáveis.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "10011d74-132b-41f0-930d-de264dd8f567",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "0.05"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "97fab4d4-6db3-4a50-b556-9a5205d744ce",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "2.3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "4a512bea-ca17-4582-90eb-09d9eb3064b9",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "15"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "4f6073d9-9a60-47ce-ba2b-880ab557f8bb",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "225"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
     "\n",
     "* Para separar palavras em nomes de variáveis, fazemos uso de underscores ('_'), mas é desencorjado a menos que o nome seja tão chato de ler que fique melhor utilizando '_'\n",
     "\n",
-    "* Nomes de *Types* e *Modules* começam com letra maiúscula e a separação de palavras é feita com CamelCase (LetraMaiusculaEmCadaPalavra)\n",
+    "* Nomes de *Types* e *Modules* começam com letra maiúscula e a separação de palavras é feita com um \"semi-camelCase\" (LetraMaiusculaEmCadaPalavra)\n",
     "\n",
     "* Nomes de *functions* e *macros* são em minúsculas e sem underscores ('_')\n",
     "\n",
