Criado o notebook "Operações matemáticas" 	Adicionadas referências aos capítulos do manual em cada notebook

--- a/Inteiros e Float.ipynb
+++ b/Inteiros e Float.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Inteiros e números decimais (Float)\n",
     "\n",
+    "***DISCLAIMER: Este notebook foi escrito com base no que li [neste](https://docs.julialang.org/en/v1/manual/integers-and-floating-point-numbers/) capítulo do manual***\n",
+    "\n",
     "Bem aqui lembramos , por exemplo, que números representados no nosso código são *numeric literals*: 1 e 1.0 são numeric literals.\n",
     "Mas as representações como objetos desses mesmos números na memória, são chamados de *numeric primitives*.\n",
     "\n",
