--- a/Variáveis.ipynb
+++ b/Variáveis.ipynb
@@ -19,6 +19,8 @@
    "source": [
     "# Variáveis\n",
     "\n",
+    "***DISCLAIMER: Este notebook foi escrito com base no que li [neste](https://docs.julialang.org/en/v1/manual/variables/) capítulo do manual***\n",
+    "\n",
     "Assim como no Python podemos armazenar valores em variáveis"
    ]
   },
