Criado e finalizado o notebook "Números complexos e racionais" 	Corrigidos erros no notebook "Variáveis"

--- a/Variáveis.ipynb
+++ b/Variáveis.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Vou apontar tudo que ache importante para aprender e dominar um pouco da linguagem Julia!\n",
     "\n",
-    "Tudo o que for aqui apontado, vem do site https://docs.julialang.org/en/v1/, mais especificamente, do Manual"
+    "Tudo o que for aqui apontado, vem do site https://docs.julialang.org/en/v1/, mais especificamente, do Manual da linguagem."
    ]
   },
   {
@@ -52,7 +52,7 @@
    "source": [
     "A parte mais interessante é que podemos definir variáveis com Unicode e LaTex. \n",
     "\n",
-    "Para criar nomes de variáveis com LaTeX, pode usaro \"\\\" e o nome seguido de um TAB.\n",
+    "Para criar nomes de variáveis com LaTeX, usamos o caractere \"\\\\\", seguido do nome do caractere, seguido de um TAB.\n",
     "Por exemplo, o delta seria: ***\\delta + TAB*** = $\\delta$"
    ]
   },
@@ -124,7 +124,7 @@
     "\n",
     "Ao contrário da grande parte das linguagens, Julia permite-nos definir as variáveis como bem entendermos, sendo a principal restrição o uso de nomes de palavras reservadas, como: *else*, *for* etc.\n",
     "\n",
-    "Também é possível definir operadores como funções específicas, por exemplo, o nosso método `sum` pode ser associado à variável $\\Sigma$"
+    "Também é possível definir operadores como funções específicas, por exemplo, o nosso método `sum` pode ser associado à variável $\\Sigma$."
    ]
   },
   {
@@ -155,7 +155,7 @@
    "id": "edfb4325-7d19-491e-bf6b-27286d02bed5",
    "metadata": {},
    "source": [
-    "Assim como posso definir que o operador `+` agora calcule os quadrado do número."
+    "Assim como posso definir que o operador `+` agora calcule o quadrado do número passado como argumento."
    ]
   },
   {
@@ -186,7 +186,7 @@
    "id": "c06bf1f9-81fa-43ec-aa8f-f852865716df",
    "metadata": {},
    "source": [
-    "\"Com grande poder vem grande responsabilidade\", levando isso em consideração quando fazemos cálculos é sempre bom deixar um espaço entre operadores e variáveis, para que Julia não pense que estamos a chamar uma variável. \n",
+    "\"Com grande poder vem grande responsabilidade\", levando isso em consideração quando fazemos cálculos é sempre bom deixar um espaço entre operadores e variáveis, para que Julia não pense que estamos a chamar uma variável, cujo nome é a junção do operador e do nome que definimos a variável, por exemplo: `+var`.\n",
     "\n",
     "Resumo:\n",
     "***Deixar sempre espaços entre operadores e variáveis***"
@@ -205,13 +205,13 @@
     "\n",
     "* Nomes de variáveis em minúsculas\n",
     "\n",
-    "* Para separar palavras em nomes de variáveis, fazemos uso de underscores ('_'), mas é desencorjado a menos que o nome seja tão chato de ler que fique melhor utilizando '_'\n",
+    "* Para separar palavras em nomes de variáveis, fazemos uso de underscores ('\\_'), mas é desencorajado o seu uso, a menos que o nome seja tão chato de ler que fique melhor utilizando '_'\n",
     "\n",
     "* Nomes de *Types* e *Modules* começam com letra maiúscula e a separação de palavras é feita com um \"semi-camelCase\" (LetraMaiusculaEmCadaPalavra)\n",
     "\n",
     "* Nomes de *functions* e *macros* são em minúsculas e sem underscores ('_')\n",
     "\n",
-    "* Quando funções têm um '!' no fim do nome, siginifica que elas modificam os argumentos diretamente, não necessitando de retornar algo. Equivalente ao `inplace` nos métodos do Pandas."
+    "* Quando funções têm um '!' no fim do nome, siginifica que elas modificam os argumentos diretamente, não necessitando de retornar algo. Equivalente ao parâmetro `inplace` nos métodos da biblioteca Pandas."
    ]
   }
  ],
