Adicionado diretório de imagens 	Corrigido o problema com a imagem ilustrativa no notebook "Números complexos e racionais"

--- a/Números complexos e racionais.ipynb
+++ b/Números complexos e racionais.ipynb
@@ -144,7 +144,8 @@
    "source": [
     "O conjugado de um número complexo (basicamente é trocar o sinal da parte imaginária, fazendo com que o vetor que representa o número complexo no plano complexo, mantenha a magnitude e que o ângulo fase seja invertido).\n",
     "\n",
-    "<img src=\"https://www.electronics-tutorials.ws/wp-content/uploads/2018/05/accircuits-acp62.gif\" alt=\"Imagem ilustrativa do conjugado\">\n",
+    "<img src=\"imagens/conjugado_ilustracao.gif\" alt=\"Imagem ilustrativa do conjugado\">\n",
+    "<small>Fonte: <a href=\"https://www.electronics-tutorials.ws/accircuits/complex-numbers.html\" target=\"_blank\">ElectronicsTutorials</a></small><br><br><br><br>\n",
     "\n",
     "Podemos obtê-lo utilizando a função `conj()`."
    ]
